src/components/ImageWithModal.css
.thumbnail {
  border: 1px solid #ccc;
  background: #ddd;
}

button.modalButton {
  border: none;
  color:transparent;
  background-color: transparent;
  box-shadow: none;
  height: inherit;
}

button.modalButton:hover {
  background-color: transparent;
}

.ant-modal-root img {
  max-width: 99%;
  max-height: 900px;
}

